--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rohan\AppData\Local\Temp\testng-eclipse--1245410724\testng-customsuite.xml</span>
+                    <span>C:\Users\rohan\AppData\Local\Temp\testng-eclipse--510491550\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tests.RegressionTests" hash-for-method="FirstScreenCase">FirstScreenCase</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tests.RegressionTests" hash-for-method="SecondScreenCase">SecondScreenCase</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tests.RegressionTests" hash-for-method="ThirdScreenCase">ThirdScreenCase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cbt.CoreJava" hash-for-method="m1">m1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.tests.RegressionTests</span>
+              <span class="class-name">cbt.CoreJava</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="FirstScreenCase">
-                  </a> <!-- FirstScreenCase -->
-                  <span class="method-name">FirstScreenCase</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SecondScreenCase">
-                  </a> <!-- SecondScreenCase -->
-                  <span class="method-name">SecondScreenCase</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ThirdScreenCase">
-                  </a> <!-- ThirdScreenCase -->
-                  <span class="method-name">ThirdScreenCase</span>
+                  <a name="m1">
+                  </a> <!-- m1 -->
+                  <span class="method-name">m1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rohan\AppData\Local\Temp\testng-eclipse--1245410724\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rohan\AppData\Local\Temp\testng-eclipse--510491550\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tests.RegressionTests&quot;/&gt;
+      &lt;class name=&quot;cbt.CoreJava&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;m1&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- cbt.CoreJava --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +188,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ThirdScreenCase')
-data.setCell(0, 2, 'com.tests.RegressionTests')
-data.setCell(0, 3, 2788);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SecondScreenCase')
-data.setCell(1, 2, 'com.tests.RegressionTests')
-data.setCell(1, 3, 1839);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'FirstScreenCase')
-data.setCell(2, 2, 'com.tests.RegressionTests')
-data.setCell(2, 3, 740);
+data.setCell(0, 1, 'm1')
+data.setCell(0, 2, 'cbt.CoreJava')
+data.setCell(0, 3, 4512);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,43 +223,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tests.RegressionTests</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">openBroswer</span>
+              <div class="chronological-class-name">cbt.CoreJava</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">m1</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">FirstScreenCase</span>
-                <span class="method-start">5555 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">6299 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">openBroswer</span>
-                <span class="method-start">6449 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SecondScreenCase</span>
-                <span class="method-start">9336 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">11178 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">openBroswer</span>
-                <span class="method-start">11336 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ThirdScreenCase</span>
-                <span class="method-start">14251 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">17040 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
